# sound-auth

./: .gitignore  .gitmodules  README.md
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/example/soundauth/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  fft.h  main.cpp  native-lib.cpp
android/app/src/main/java/com/example/soundauth/: Auth.java  ByteArrayMediaDataSource.java  DeviceInfo.java  ListenService.java  MainActivity.java  MessageHandler.java  MessageReceiver.java  MessageSender.java  PreferencesManager.java  SoundProcessException.java  deviceList.java
android/app/src/main/res/layout/: activity_main.xml  fragment_device_info.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/example/soundauth/: ExampleUnitTest.java
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
linux/: .gitignore  CMakeLists.txt  audio-control.cpp  audio-control.h  communication.cpp  communication.h  config  main.cpp  sound-auth  sound-auth.cfg
linux/src/: config.cpp  config.h  main.cpp  util.cpp  util.h
linux/src/audio/: audio-control.cpp  audio-control.h  communication.cpp  communication.h
linux/src/ggwave/: ggwave.cpp
linux/src/pam/: authenticate.cpp  base64.hpp  otp.cpp  setup.cpp
